--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/grey_200"
-    tools:context="com.siskopsya.amm.setting.SettingActivity">
+    tools:context="com.siskopsya.amm.additional.SettingActivity">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
